--- a/doc/thesis/201605_PlanPresentation/presentation.tex
+++ b/doc/thesis/201605_PlanPresentation/presentation.tex
@@ -21,7 +21,7 @@
 
 
 \title{
-	Co-evolution of trade and culture.
+	Cultural evolution and long term economic dynamics :\\The case study of Rome.
 }
 
 \institute{May 2016}
@@ -153,53 +153,39 @@
 	\end{center}
 \end{frame}
 
-%Next slide was bad
-%\begin{frame}
-%	\begin{columns}
-%		\begin{column}{.3\textwidth}
-%			\includegraphics[width=\textwidth]{images/bordeaux.jpg}	
-%		\end{column}
-%
-%		\begin{column}{.2\textwidth}
-%		\end{column}
-%		\begin{column}{.3\textwidth}
-%			\includegraphics[width=3cm]{images/napa}	
-%		\end{column}
-%	\end{columns}
-%	\begin{center}
-%		What happen when such mechanisms act on traits impacting economy?
-%	\end{center}
-%	\begin{columns}
-%		\begin{column}{.3\textwidth}
-%			\includegraphics[width=\textwidth]{images/tools}	
-%		\end{column}
-%		\begin{column}{.2\textwidth}
-%		\end{column}
-%		\begin{column}{.3\textwidth}
-%			\includegraphics[width=3cm]{images/stockoption}	
-%		\end{column}
-%	\end{columns}
-%\end{frame}
 %
 \begin{frame}{Co-evolution of Economy and Culture}
 
-%How Simple Cultural Dynamics influence Economy That in turn will influence cultural dynamics.
     \begin{center}
 	\includegraphics[width=\textwidth]{images/interaction}	
     \end{center}
 
 \end{frame}
 
-\section{ABM Framework}
+\begin{frame}
+    \begin{enumerate}
+	\item How this interaction loop modifies the distribution of the cultural variants
+	\item Caracterize Economy
+    \end{enumerate}
 
-%\begin{frame}{A General Agent Based Framework }
-%	\begin{center}
-%	    \includegraphics[width=.6\textwidth]{images/schema_model.png}
-%	\end{center}
-%\end{frame}
+\end{frame}
 
-%Slide xavi wanted me to put but I cannot make it fit
-\begin{frame}{Material}
+
+\section{Methods}
+
+\begin{frame}{Approach}
+    To achieve that
+    \begin{itemize}
+	\item Archaeology
+	    \begin{itemize}
+		\item<2-> Broader Comparison (Cross culture and cross time)
+	    \end{itemize}
+	\item<3-> Computer Simulation
+	    \begin{itemize}
+		\item<4-> Compare \& Select models
+		\item<5-> Explore \& Generate hypothesis
+	    \end{itemize}
+    \end{itemize}
 Usually, to perform such study:\\
 	Facebook, twitter, database of photos\dots\\
 	    \vspace{.5cm}
@@ -274,18 +260,6 @@ Usually, to perform such study:\\
 
 \section{Results}
 
-\begin{frame}{Results: Frequency Distribution}
-    \subsection*{Distribution of variant:}
-    \begin{figure}[!h]
-	\begin{center}
-	    \begin{tabular}{ccc}
-		\includegraphics[width=5cm]{images/2SetupDistribA.pdf}\\
-	    \end{tabular}
-
-	\end{center}
-	%\caption{Frequencies distribution, where each points represent the mean for 100 runs, for: a) the neutral and the trading models.  b) the neutral model and the trading model without the trading innovation process. c) the trade model and the trade model without the trading innovation process.}
-    \end{figure}
-\end{frame}
 
 
 \begin{frame}{Results: Economic Dynamic}
@@ -316,31 +290,26 @@ Usually, to perform such study:\\
 	
 \end{frame}
 
-\begin{frame}{Summary}
-\begin{itemize}
-		\vfill
-	    \item Economic Dynamic $\rightarrow$ Culture :
-			\begin{itemize}
-			    \item Random social learning: scale-free distribution of trait. 
-			    \item Social learning biased toward economic attribute: non power-law distribution.
-			\end{itemize}
-		\vfill
-	    \item Culture Mechanism $\rightarrow$ Economy : 
-		\begin{itemize}
-		    \item Random Mechanism: inefficient eco.
-		    \item Biased Mechanism: efficient eco.
-		\end{itemize}
-		\vfill
-	\item A local copy mechanism alone is enough to bring the global economy to an optimal equilibrium.
-\end{itemize}
+\begin{frame}{Results: Frequency Distribution}
+    \subsection*{Distribution of variant:}
+    \begin{figure}[!h]
+	\begin{center}
+	    \begin{tabular}{ccc}
+		\includegraphics[width=5cm]{images/2SetupDistribA.pdf}\\
+	    \end{tabular}
 
+	\end{center}
+	%\caption{Frequencies distribution, where each points represent the mean for 100 runs, for: a) the neutral and the trading models.  b) the neutral model and the trading model without the trading innovation process. c) the trade model and the trade model without the trading innovation process.}
+    \end{figure}
 \end{frame}
-\section{Application}
+
 \begin{frame}{Next Objectives}
     \vfill
     Understand general dynamics and properties of such systems:
     \vfill
 	\begin{itemize}
+	\item Parameters fitting
+    \vfill
 	\item Different Cultural Mechanisms
     \vfill
 	\item Different Trade Assumption
@@ -352,61 +321,31 @@ Usually, to perform such study:\\
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{}
-
-    {\large Study Cultural evolution \textbf{is not} possible without archaeology studies}
-    \vspace{.5cm}
-    \uncover<2->{
-    \begin{center}
-	and
-    \end{center}
-    \vspace{.5cm}
-}
-
-\uncover<3>{    {\large Simulation as a tool to implement and test hypothesis made on Historical questions.}\\
-    \vspace{.5cm}
-	{\scriptsize(Carrignon et al., Model \& Simluation 7, May 2016, BCN)}
-    }
-	
+\begin{frame}{Scaling properties}
+    From biology\dots
+\end{frame}
+\begin{frame}{Scaling properties}
+    \dots cities
+    
+    Useful tool to caracterize socio-economics properties of cities
 \end{frame}
 
-\begin{frame}{Case Study}
 
-    \begin{columns}
-	\begin{column}{.35\textwidth}
-	The Economy of the Roman Empire \\
-	\end{column}
-	\begin{column}{.6\textwidth}
-	\begin{figure}
-	    \includegraphics[width=\textwidth]{images/bevan.png}\\
-	\caption{\scriptsize Bevan 2014}
-	\end{figure}
-	\end{column}
-    \end{columns}
-\end{frame}
+
 
 \begin{frame}
     %{Case Study}
 	\begin{center}
 		\Large
-    Thank for you attention!\\
+    Thank for coming \& for you attention!\\
+		\vspace{1cm}
 %		What was the nature of Roman economy?\\
 		\includegraphics[width=2cm]{images/LOGO-ERC.jpg} \hfil	\includegraphics[width=3cm]{images/epnetLogo.png}\\
-		\vspace{1cm}
-		\scriptsize
-			http://www.roman-ep.net/\\
-			@epnetproject\\
-			fb.com/EPNetProject\\
-			@simoncarrignon
 	\end{center}
 
 
 \end{frame}
 
-%\begin{frame}
-%    \Huge
-%    Thank for you attention!
-%\end{frame}
 \end{document}
 
 
