[UPF] Version avant de partir pour CSIC

--- a/doc/thesis/201605_PlanPresentation/presentation.tex
+++ b/doc/thesis/201605_PlanPresentation/presentation.tex
@@ -52,6 +52,23 @@
 
 \end{frame}
 
+\begin{frame}{Context}
+    \vfill
+    \begin{description}
+	\item[School:] UPF PhD Programme in Biomedicine 
+    \vfill
+	\item<2->[Supervision:] Xavier Rubio (BSC) \\ Sergi Valverde (UPF-Complex System Lab)
+    \vfill
+	\item<3->[Funding:] 4-years grant from EPNet project \\ (ERC advanced Grant 340828):
+    \end{description}
+    \vspace{-.2cm}
+    \uncover<3->{\begin{quote}
+	\small
+	Production and Distribution of Food during the Roman Empire: Economic and Political Dynamics
+    \end{quote}}
+    \vfill
+\end{frame}
+
 %\begin{frame}{Plan of the presentation}
 %	\begin{enumerate}
 %		\item Introduction
@@ -162,46 +179,64 @@
 
 \end{frame}
 
-\begin{frame}
-    \begin{enumerate}
-	\item How this interaction loop modifies the distribution of the cultural variants
-	\item Caracterize Economy
-    \end{enumerate}
-
-\end{frame}
 
 
 \section{Methods}
+\begin{frame}
+    \centering
+    \Large
+    Approach
+\end{frame}
+
 
 \begin{frame}{Approach}
-    To achieve that
     \begin{itemize}
 	\item Archaeology
 	    \begin{itemize}
-		\item<2-> Broader Comparison (Cross culture and cross time)
+		\item<2-> Compare culture across time (vs ``twitter studies'')
 	    \end{itemize}
+	    \vfill
 	\item<3-> Computer Simulation
 	    \begin{itemize}
 		\item<4-> Compare \& Select models
 		\item<5-> Explore \& Generate hypothesis
 	    \end{itemize}
+	    \vfill
     \end{itemize}
-Usually, to perform such study:\\
-	Facebook, twitter, database of photos\dots\\
-	    \vspace{.5cm}
-	    \begin{alertblock}{Biases} 
-	Comparison between cultures and across time is needed : \\
-	    \begin{center}
-		\uncover<2>{\large \textbf{Archaeology}}
-	    \end{center}
-	
-    \end{alertblock}
+\end{frame}
+
+\begin{frame}
+    \begin{center}
+	\includegraphics[width=\textwidth]{images/approach.pdf}		
+    \end{center}
+    
+\end{frame}
+
+\begin{frame}
+    \begin{center}
+	\includegraphics[width=\textwidth]{images/approach2.pdf}		
+    \end{center}
+    
 \end{frame}
 
 \begin{frame}
     \centering
     \Large
-    Our Model
+   Plan 
+\end{frame}
+\begin{frame}{Plan}
+    \begin{enumerate}
+	\item<1->Theoretical Exploration:\\ How economics value change the dynamics of Cultural Evolution
+	\item<2-> Empirical Study:\\  Characterize an economy through socio-economic artefacts distribution, a case study, the Roman Empire.
+	\item<3-> Articulate the Theoretical Exploration \& the Empirical Observations
+    \end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+    \centering
+    \Large
+    Theoretical Exploration
 \end{frame}
 
 \begin{frame}{A General Agent Based Framework }
@@ -321,17 +356,55 @@ Usually, to perform such study:\\
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Scaling properties}
-    From biology\dots
+\begin{frame}
+    \centering
+    \Large
+   Empirical Studies 
 \end{frame}
+\begin{frame}{Empirical Studies}
+	Characterize an economy through socio-economic artefacts distribution:\\
+	\hspace{1cm} The need of strong proxy
+\end{frame}
+
 \begin{frame}{Scaling properties}
-    \dots cities
+    Roman Empire:
+    \begin{itemize}
+	\item Diversity of producer vs City Size 
+	\item Comparison between different markets (olive oil vs wine)
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Scaling properties}
+    \begin{figure}
+	\includegraphics[width=.8\textwidth]{images/wageVsSize.jpg}
+	\caption{ Bettencourt 2007}
+    \end{figure}
+\end{frame}
+
+
+
+\begin{frame}
+    \centering
+    \Large
+  Last Part
+\end{frame}
+
+\begin{frame}
+ To what extent the theoretical model can explain the observed patterns?
     
-    Useful tool to caracterize socio-economics properties of cities
+
 \end{frame}
 
-
-
+\begin{frame}{So far}
+    \small
+    \begin{itemize}
+	\item Random Copy vs Economy-Biased Copy : WSC 15
+	\item Social Network Impact on Economic dynamics: Complenet \& CAA 16
+	\item  Scaling Law and Cities: DACAS1 16
+	\item  Model and Computer Sim in History \&  Archaeology: MS7 16
+    \end{itemize}
+    
+\end{frame}
 
 \begin{frame}
     %{Case Study}
