[BIB] add some ref

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -28,6 +28,22 @@
 	year = "1952"
 }
 
+@article{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation,
+	abstract = {<sec id="sec001"> <title>Formal Models and History</title> Computational models are increasingly being used to study historical dynamics. This new trend, which could be named Model-Based History, makes use of recently published datasets and innovative quantitative methods to improve our understanding of past societies based on their written sources. The extensive use of formal models allows historians to re-evaluate hypotheses formulated decades ago and still subject to debate due to the lack of an adequate quantitative framework. The initiative has the potential to transform the discipline if it solves the challenges posed by the study of historical dynamics. These difficulties are based on the complexities of modelling social interaction, and the methodological issues raised by the evaluation of formal models against data with low sample size, high variance and strong fragmentation. </sec> <sec id="sec002"> <title>Case Study</title> This work examines an alternate approach to this evaluation based on a Bayesian-inspired model selection method. The validity of the classical Lanchester?s laws of combat is examined against a dataset comprising over a thousand battles spanning 300 years. Four variations of the basic equations are discussed, including the three most common formulations (linear, squared, and logarithmic) and a new variant introducing fatigue. Approximate Bayesian Computation is then used to infer both parameter values and model selection via Bayes Factors. </sec> <sec id="sec003"> <title>Impact</title> Results indicate decisive evidence favouring the new fatigue model. The interpretation of both parameter estimations and model selection provides new insights into the factors guiding the evolution of warfare. At a methodological level, the case study shows how model selection methods can be used to guide historical research through the comparison between existing hypotheses and empirical evidence. </sec>},
+	author = "Rubio-Campillo, Xavier",
+	doi = "10.1371/journal.pone.0146491",
+	journal = "PLoS ONE",
+	localfile = "../pdfs/ruibiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation.pdf",
+	month = "01",
+	number = "1",
+	pages = "1--18",
+	publisher = "Public Library of Science",
+	title = "{Model Selection in Historical Research Using Approximate Bayesian Computation}",
+	url = "http://dx.doi.org/10.1371%2Fjournal.pone.0146491",
+	volume = "11",
+	year = "2016"
+}
+
 @article{weaver1948scienceandcomplexity,
 	author = "Weaver, Warren",
 	journal = "American scientist",
@@ -66,6 +82,23 @@
 	url = "http://science.sciencemag.org/content/284/5420/1677",
 	volume = "284",
 	year = "1999"
+}
+
+@inproceedings{barandiaran06alifemodelsasepistemicartefacts,
+	author = "Barandiaran, Xabier E. and Moreno, Alvaro",
+	booktitle = "{Artificial Life X : Proceedings of the Tenth International Conference on the Simulation and Synthesis of Living Systems}",
+	citeulike-article-id = "701505",
+	day = "1",
+	editor = "Rocha, Luis M. and Yaeger, Larry S. and Bedau, Mark A. and Floreano, Dario and Goldstone, Robert L. and Vespignani, Alessandro",
+	keywords = "methodology; modelling; pocs",
+	month = aug,
+	organization = "International Society for Artificial Life",
+	pages = "513--519",
+	posted-at = "2006-06-20 01:53:04",
+	priority = "4",
+	publisher = "The MIT Press (Bradford Books)",
+	title = "{ALife Models as Epistemic Artefacts}",
+	year = "2006"
 }
 
 @article{renwick2010patrickgeddesandthepoliticsofevolution,
@@ -134,6 +167,21 @@
 	pages = "1--12",
 	title = "{An introduction to niche construction theory}",
 	url = "http://dx.doi.org/10.1007/s10682-016-9821-z",
+	year = "2016"
+}
+
+@article{brughmans2016mercuryanagentbasedmodeloftablewaretradeintheromaneast,
+	abstract = "A large number of complex hypotheses exists that aim to explain aspects of the Roman economy, consisting of many explanatory factors that are argued to affect each other. Such complex hypotheses cannot be compared or tested through the traditional practice of qualitative argumentation and comparison with selected small sets of written and material sources alone. Moreover, these hypotheses often draw on different conceptual frameworks to abstract the same past phenomenon under study, hampering formal comparison. There is a need in the study of the Roman economy for more formal computational modelling for representing and comparing the many existing conceptual models, and for testing their ability to explain patterns observed in archaeological data where possible. This paper aims to address this need. It argues that communicating the potential contribution of computational modelling to scholars of the Roman economy should focus on providing theoretically well-founded arguments for the selection of the included and excluded variables, the conceptualisation used, and to address those elements of conceptual models that are at the forefront of scholarly debates. This approach is illustrated in this paper through MERCURY (Market Economy and Roman Ceramics Redistribution, after the Roman patron god of commerce), an agent-based model (ABM) of ceramic tableware trade in the Roman East. MERCURY presents a representation of two conflicting conceptual models of the degree of market integration in the Roman Empire, both of which serve as potential explanations for the empirically observed strong differences in the distribution patterns of tablewares. This paper illustrates how concepts derived from network science can be used to abstract both conceptual models, to implement these in an ABM and to formally compare them. The results of experiments with MERCURY suggest that limited degrees of market integration are unlikely to result in wide tableware distributions and strong differences between the tableware distributions. We conclude that in order for the discussion on the functioning of the Roman economy to progress, authors of conceptual models should (a) clearly define the concepts used and discuss exactly how these differ from the concepts used by others, (b) make explicit how these concepts can be represented as data, (c) describe the expected behaviour of the system using the defined concepts, (d) describe the expected data patterns resulting from this behaviour, and (d) define how (if at all) archaeological and historical sources can be used as reflections or proxies of these expected data patterns.",
+	author = "Brughmans, Tom and Poblome, Jeroen",
+	issn = "1460-7425",
+	journal = "Journal of Artificial Societies and Social Simulation",
+	keywords = "Roman Economy; Network Science; Economics; Archaeology; Ceramics; History",
+	localfile = "../pdfs/brughmans2016mercuryanagentbasedmodeloftablewaretradeintheromaneast.pdf",
+	number = "1",
+	pages = "3",
+	title = "{MERCURY: an Agent-Based Model of Tableware Trade in the Roman East}",
+	url = "http://jasss.soc.surrey.ac.uk/19/1/3.html",
+	volume = "19",
 	year = "2016"
 }
 
