[UPF] Research Plan Border

--- a/doc/thesis/201605_ResearchPlan/main.tex
+++ b/doc/thesis/201605_ResearchPlan/main.tex
@@ -31,19 +31,23 @@
 
 	\vspace{3cm}
 
-{
+\hspace{-1cm}
+\fbox{
 
-\noindent\textbf{Student:} Simon Carrignon
-\vspace{.5cm}
+    \begin{minipage}{\textwidth}
+	\vspace{.2cm}
+	\noindent\textbf{Student:} Simon Carrignon
+	\vspace{.5cm}
 
-\noindent\textbf{Project Title:} ``Cultural evolution and long term economic dynamics: The case study of Rome.''
-\vspace{.5cm}
+	\noindent\textbf{Project Title:} ``Cultural evolution and long term economic dynamics: The case study of Rome.''
+	\vspace{.5cm}
 
-\noindent\textbf{PhD thesis supervisors:} Xavier Rubio-Campillo \& Sergi Vavlerde
-\vspace{.5cm}
+	\noindent\textbf{PhD thesis supervisors:} Xavier Rubio-Campillo \& Sergi Vavlerde
+	\vspace{.5cm}
 
-\noindent\textbf{Research Group:} Barcelona Supercomputing \& Center Complex System Lab (UPF)  
-\vspace{.5cm}
+	\noindent\textbf{Research Group:} Barcelona Supercomputing \& Center Complex System Lab (UPF)  
+	\vspace{.2cm}
+    \end{minipage}
 
 }
 \vspace{2cm}
